--- a/test.html
+++ b/test.html
@@ -111,8 +111,8 @@
     <script>
         function handlerClick() {
             $("button").css({
-                "background-color": "blue",
-                "width": "300px",
+                backgroundColor: "blue",
+                width: "300px",
                 height: 100
             })
         }
